--- a/web/index.html
+++ b/web/index.html
@@ -59,7 +59,7 @@
   <meta name="msapplication-TileColor" content="#484F8F">
   <meta name="msapplication-TileImage" content="icons/ms-icon-144x144.png">
 
-
+  <script src="https://cdn.jsdelivr.net/npm/jsqr@1.3.1/dist/jsQR.min.js"></script>
   <script src="https://cdn.onesignal.com/sdks/OneSignalSDK.js" async=""></script>
   <script>
     window.OneSignal = window.OneSignal || [];
