add URL Inspection Tool

--- a/web/index.html
+++ b/web/index.html
@@ -70,6 +70,7 @@
     });
   </script>
 
+  <meta name="google-site-verification" content="6bFGRwElLfGvomCVfTe07s5GjvmxZw7RROQU9jIkW7E" />
 </head>
 
 <body
