--- a/web/index.html
+++ b/web/index.html
@@ -71,6 +71,18 @@
   </script>
 
   <meta name="google-site-verification" content="6bFGRwElLfGvomCVfTe07s5GjvmxZw7RROQU9jIkW7E" />
+
+  <!-- Global site tag (gtag.js) - Google Analytics -->
+  <script async src="https://www.googletagmanager.com/gtag/js?id=UA-195998067-1"></script>
+  <script>
+    window.dataLayer = window.dataLayer || [];
+    function gtag() { dataLayer.push(arguments); }
+    gtag('js', new Date());
+
+    gtag('config', 'UA-195998067-1');
+  </script>
+
+  <script src="app.js" defer></script>
 </head>
 
 <body
